# celery_root

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  Makefile  NEXT_STEPS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
LICENSES/: BSD-3-Clause.txt
celery_cnc/: __init__.py  cli.py  config.py
celery_cnc/components/mcp/: server.py
celery_cnc/components/metrics/opentelemetry/: exporter.py
celery_cnc/components/metrics/prometheus/: exporter.py
celery_cnc/components/web/: settings.py
celery_cnc/components/web/static/css/: app.css
celery_cnc/components/web/static/js/: logs.js  task-form.js
celery_cnc/components/web/templates/: base.html  logs.html  opentelemetry.html  settings.html
celery_cnc/components/web/templates/tasks/: detail.html
celery_cnc/components/web/views/: logs.py  settings.py  tasks.py
celery_cnc/core/: event_listener.py  process_manager.py
celery_cnc/db/: memory.py  sqlite.py
celery_cnc/mcp/: __init__.py  db.py  server.py
celery_cnc/web/: auth.py  settings.py  urls.py
celery_cnc/web/static/graph/: graph.css  graph.js
celery_cnc/web/static/js/: theme.js
celery_cnc/web/templates/: settings.html
celery_cnc/web/views/: dashboard.py  settings.py  system.py  tasks.py
celery_root/: __init__.py  cli.py  config.py
celery_root/components/: __init__.py  base.py  context.py
celery_root/components/beat/: __init__.py  controller.py  db_scheduler.py
celery_root/components/mcp/: __init__.py  db.py  server.py
celery_root/components/metrics/: __init__.py  base.py  stats.py
celery_root/components/metrics/opentelemetry/: __init__.py  exporter.py
celery_root/components/metrics/prometheus/: __init__.py  exporter.py
celery_root/components/web/: __init__.py  asgi.py  auth.py  components.py  consumers.py  context_processors.py  devserver.py  manage.py  services.py  settings.py  urls.py  wsgi.py
celery_root/components/web/static/: favicon-16.png.license
celery_root/components/web/static/css/: app.css
celery_root/components/web/static/graph/: graph.css  graph.js
celery_root/components/web/static/js/: beat-form.js  broker.js  charts.js  dag.js  dashboard-workers.js  dashboard.js  expand-modal.js  filter-form.js  layout.js  logs.js  search.js  select-search.js  settings.js  tabs.js  task-form.js  task-list.js  theme.js  worker-detail.js  workers-fleet.js  workers-list.js  workers-overview.js
celery_root/components/web/templates/: 404.html  base.html  beat.html  broker_content.html  dashboard.html  dashboard_content.html  logs.html  opentelemetry.html  prometheus.html  settings.html
celery_root/components/web/templates/beat/: form.html
celery_root/components/web/templates/brokers/: _queue_table.html  detail_generic.html  detail_kafka.html  detail_rabbit.html  detail_redis.html  detail_sqs.html
celery_root/components/web/templates/tasks/: detail.html  graph.html  list.html  submit.html
celery_root/components/web/templates/workers/: add.html  detail.html  detail_content.html  list.html  list_content.html
celery_root/components/web/views/: __init__.py  api.py  beat.py  broker.py  dashboard.py  decorators.py  docs.py  errors.py  graphs.py  logs.py  metrics.py  settings.py  system.py  tasks.py  workers.py
celery_root/core/: __init__.py  component_status.py  control.py  event_listener.py  inspector.py  process_manager.py  reconciler.py  registry.py
celery_root/core/db/: __init__.py  dispatch.py  manager.py  rpc_client.py
celery_root/core/db/adapters/: __init__.py  base.py
celery_root/core/db/adapters/memory/: __init__.py
celery_root/core/db/adapters/sqlite/: __init__.py
celery_root/core/db/models/: __init__.py
celery_root/core/engine/: __init__.py  backend.py  beat.py  health.py  retry.py  tasks.py  workers.py
celery_root/core/engine/backends/: __init__.py
celery_root/core/engine/backends/redis/: __init__.py
celery_root/core/engine/backends/sqlalchemy/: __init__.py
celery_root/core/engine/brokers/: __init__.py  base.py
celery_root/core/engine/brokers/rabbitmq/: __init__.py
celery_root/core/engine/brokers/redis/: __init__.py
celery_root/core/logging/: __init__.py  setup.py  utils.py
celery_root/core/logging/adapters/: __init__.py  base.py  file.py
celery_root/shared/: __init__.py  redaction.py
celery_root/shared/schemas/: __init__.py  domain.py  rpc.py
demo/: Dockerfile  README.md  __init__.py  common.py  infra.docker-compose.yml  main.py  otel-collector-config.yaml  run_graph_demo.py  schedule_demo_tasks.py  schedule_tasks.py  worker.docker-compose.yml  worker_math.py  worker_sleep.py  worker_text.py
frontend/graph-ui/: package-lock.json  package.json  vite.config.ts
frontend/graph-ui/src/: GraphApp.tsx  entry.tsx
frontend/graph-ui/src/components/: ChordJoinNode.tsx  DetailsPanel.tsx  GroupNode.tsx  Legend.tsx  SelfLoopEdge.tsx  TaskNode.tsx  Toolbar.tsx
frontend/graph-ui/src/graph/: layout.ts  stateColors.ts  transforms.ts  types.ts
frontend/graph-ui/src/styles/: index.css
tests/: conftest.py  test_beat_controller_helpers.py  test_cnc_backend.py  test_cnc_beat.py  test_cnc_broker.py  test_cnc_health.py  test_cnc_retry.py  test_cnc_tasks.py  test_cnc_workers.py  test_component_status.py  test_core_beat.py  test_core_db_dispatch_more.py  test_core_db_manager_dispatch.py  test_core_db_manager_helpers.py  test_core_event_listener.py  test_core_init.py  test_core_process_manager.py  test_core_reconciler.py  test_db_controllers.py  test_event_listener.py  test_integration_pipeline.py  test_logging_controller.py  test_logging_setup.py  test_mcp_server.py  test_monitoring_exporters.py  test_monitoring_stats.py  test_registry.py  test_rpc_client_helpers.py  test_sqlite_adapter_more.py  test_sqlite_adapter_paging.py  test_task_schema.py  test_web_auth.py  test_web_auth_helpers.py  test_web_beat_helpers.py  test_web_broker_helpers.py  test_web_dashboard_helpers.py  test_web_devserver.py  test_web_graphs_helpers.py  test_web_logs_helpers.py  test_web_metrics_views.py  (+6 more)
tests/fixtures/: __init__.py  app_one.py  app_two.py
