# SPDX-FileCopyrightText: 2026 Christian-Hauke Poensgen
# SPDX-FileCopyrightText: 2026 Maximilian Dolling
# SPDX-FileContributor: AUTHORS.md
#
# SPDX-License-Identifier: BSD-3-Clause

[project]
name = "celery_root"
version = "0.1.0"
description = "Command & Control for Celery Workers"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSES/BSD-3-Clause.txt"]
authors = [{ name = "Christian-Hauke Poensgen" },{ name = "Maximilian Dolling" }]
keywords = [
  "celery",
  "monitoring",
  "observability",
  "mcp",
  "prometheus",
  "otel"
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Developers",
    "Framework :: Celery",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Distributed Computing",
    "Framework :: Celery",
    "Typing :: Typed",
]

requires-python = ">=3.10"
dependencies = [
  "celery[tblib]",
  "django",
  "fastmcp",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "uvicorn",
  "prometheus-client",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "pydantic-extra-types",
  "click",
]

[project.urls]
Documentation = "https://docs.celeryroot.eu/"
Repository = "https://github.com/christianhpoe/celery_root"
Issues = "https://github.com/christianhpoe/celery_root/issues"

[project.scripts]
celery-root = "celery_root.cli:main"

[project.entry-points."celery.commands"]
celery-root = "celery_root.cli:celery_root"

[dependency-groups]
dev = [
  "celery[librabbitmq,redis]",
  "sqlalchemy",
  "psycopg2-binary",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pre-commit",
  "celery-types",
  "django-stubs",
  "reuse",
]

[tool.hatch.build.targets.wheel]
packages = ["celery_root"]

[tool.hatch.build.targets.wheel.force-include]
"celery_root/components/web/templates" = "celery_root/components/web/templates"
"celery_root/components/web/static" = "celery_root/components/web/static"
"celery_root/py.typed" = "celery_root/py.typed"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004", "S101"]


[tool.mypy]
python_version = "3.13"
files = ["celery_root", "tests", "demo"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
  "django",
  "django.*",
  "celery",
  "celery.*",
  "kombu",
  "kombu.*",
  "amqp",
  "amqp.*",
  "billiard",
  "billiard.*",
  "redis",
  "redis.*",
  "vine",
  "vine.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli = "True"
log_level = "ERROR"
log_cli_level = "ERROR"
asyncio_mode = "auto"
filterwarnings = []
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
