# SPDX-FileCopyrightText: 2026 Christian-Hauke Poensgen
# SPDX-FileCopyrightText: 2026 Maximilian Dolling
# SPDX-FileContributor: AUTHORS.md
#
# SPDX-License-Identifier: BSD-3-Clause

[project]
name = "celery_root"
dynamic = ["version"]
description = "Command & Control for Celery Workers"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSES/BSD-3-Clause.txt"]
authors = [{ name = "Christian-Hauke Poensgen" },{ name = "Maximilian Dolling" }]
keywords = [
  "celery",
  "monitoring",
  "observability",
  "mcp",
  "prometheus",
  "otel"
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Developers",
    "Framework :: Celery",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Distributed Computing",
    "Framework :: Celery",
    "Typing :: Typed",
]

requires-python = ">=3.12,<3.15"
dependencies = [
  "celery[tblib]>=5.0.5,<6",
  "pydantic>=2.12",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy>=2,<3",
  "click>=8.1",
]

[project.optional-dependencies]
web = [
  "django>=4,<7",
]
otel = [
  "opentelemetry-sdk>=1.30,<2",
  "opentelemetry-exporter-otlp>=1.33,<2",
]
prometheus = [
  "prometheus-client>=0.13.0,<1",
]
mcp = [
  "fastmcp>=2.12,<3",
  "uvicorn>=0.35.0,<1",
  "django>=4,<7",
]

[project.urls]
Documentation = "https://docs.celeryroot.eu/"
Repository = "https://github.com/christianhpoe/celery_root"
Issues = "https://github.com/christianhpoe/celery_root/issues"

[project.scripts]
celery-root = "celery_root.cli:main"

[project.entry-points."celery.commands"]
celery-root = "celery_root.cli:celery_root"

[dependency-groups]
dev = [
  "celery[librabbitmq,redis,sqlalchemy]",
  "django>=4,<7",
  "fastmcp>=2.12,<3",
  "uvicorn>=0.35.0,<1",
  "prometheus-client>=0.13.0,<1",
  "opentelemetry-sdk>=1.30,<2",
  "opentelemetry-exporter-otlp>=1.33,<2",
  "sqlalchemy",
  "psycopg2-binary",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pre-commit",
  "celery-types",
  "django-stubs",
  "reuse",
  "coverage>=7.13.4",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004", "S101", "SLF001"]


[tool.mypy]
python_version = "3.12"
files = ["celery_root", "tests", "demo"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
log_cli = "True"
log_level = "ERROR"
log_cli_level = "ERROR"
asyncio_mode = "auto"
filterwarnings = []
asyncio_default_fixture_loop_scope = "session"

[tool.hatch.build.targets.sdist.force-include]
"celery_root/components/web/static/graph/graph.js"="celery_root/components/web/static/graph/graph.js"
"celery_root/components/web/static/graph/graph.css"="celery_root/components/web/static/graph/graph.css"

[tool.hatch.build.targets.wheel.force-include]
"celery_root/components/web/static/graph/graph.js"="celery_root/components/web/static/graph/graph.js"
"celery_root/components/web/static/graph/graph.css"="celery_root/components/web/static/graph/graph.css"

[tool.hatch.version]
source = "vcs"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
